--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
