--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
+    "react-responsive-carousel": "^3.2.23",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
