--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-feather": "^2.0.10",
-    "react-responsive-carousel": "^3.2.23",
     "tw-elements": "^2.0.0"
   },
   "devDependencies": {
